<resources>
    <string name="default_notification_channel_id">default</string>
    <string name="google_maps_key">AIzaSyA2cK4nTNpQexqZ4WfyFO-TVn1YRuVHQPc</string>
    <string name="web_pop_sharelink">Share link</string>
    <string name="web_pop_copylink">Copy link</string>
    <string name="load_no_result"> The system has no data</string>
    <string name="loading">Processing</string>
    <string name="load_more_fail">>Connection error, touch to reload</string>
    <string name="load_more_no_result">All results are loaded</string>
    <string name="error_network">Having connection problems. Touch to reload</string>
    <string name="sai_ten_dang_nhap_hoac_mat_khau">Incorrect username or password</string>
    <string name="context_menu_xoa">Delete</string>
    <string name="context_menu_sua">Edit</string>
    <string name="context_menu_huy">Cancel</string>
    <string name="btn_xacnhan">Confirm</string>
    <string name="btn_dongy">Agree</string>
    <string name="btn_hoanthanh">Done</string>
    <string name="btn_huy">Cancel</string>
    <string name="btn_chon">Select</string>
    <string name="btn_datban">Table reservation</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_quaylai">Return</string>
    <string name="btn_thanhtoan">Pay</string>
    <string name="btn_xong">Done</string>
    <string name="btn_boqua">Skip</string>
    <string name="btn_co">Yes</string>
    <string name="btn_khong">No</string>
    <string name="btn_dong">Close</string>
    <string name="btn_tieptuc">Continue</string>
    <string name="ngon_ngu">English</string>
    <string name="dang_nhap">Log in</string>
    <string name="dang_ky">Register</string>
    <string name="ten_dang_nhap">Username</string>
    <string name="mat_khau">Password</string>
    <string name="mat_khau_cu">Current Password</string>
    <string name="mat_khau_moi">New Password</string>
    <string name="ma_dich_vu">Service Code</string>
    <string name="bao_cao_ngay">Daily Report</string>
    <string name="bao_cao_thang">Monthly Report</string>
    <string name="bao_cao_gio">Hourly Report</string>
    <string name="bao_cao_hoa_don">Receipt Report</string>
    <string name="bao_cao_giao_hang">Delivery report</string>
    <string name="bao_cao_dat_cho">Reservation report</string>
    <string name="lien_he">Contact</string>
    <string name="doi_mat_khau">Change password</string>
    <string name="thong_bao">Notification</string>
    <string name="thong_bao2">Notification (#value)</string>
    <string name="thoat">Are you sure want to log out? </string>
    <string name="dang_xuat">Log out</string>
    <string name="decrease_text">
<![CDATA[ <font color=#B90E52>#value</font> ]]>
</string>
    <string name="increase_text">
<![CDATA[ <font color=#0A356A>#value</font> ]]>
</string>
    <string name="percent_yes">#value to yesterday</string>
    <string name="percent_last_week">#value to the same date last week</string>
    <string name="percent_last_month">#value to the same period last month</string>
    <string name="hoa_don">Receipt</string>
    <string name="diem_tong">Overall</string>
    <string name="thang">Month</string>
    <string name="nam">Year</string>
    <string name="chart_bill_size_item">Quantity of items in a bill </string>
    <string name="chart_bill_size_amount">Amount of money in a bill </string>
    <string name="vui_long_chon_nha_hang">Please select a restaurant</string>
    <string name="bieu_do_so_luong">Quantity of items chart </string>
    <string name="bieu_do_so_tien">Amount of money chart </string>
    <string name="tat_ca">All</string>
    <string name="do_phu">Coverage</string>
    <string name="doanh_thu_theo_thang">Monthly Revenue</string>
    <string name="doanh_thu_theo_nam">Annual Revenue</string>
    <string name="doanh_thu_theo_nhom_mon_an">Revenue by Item group</string>
    <string name="doanh_thu_theo_loai_mon_an">Revenue by Item Category</string>
    <string name="bieu_do">Chart</string>
    <string name="bao_cao">Reports</string>
    <string name="thuc_don">Menu</string>
    <string name="tong_so_ban"> Total number of tables:</string>
    <string name="co_nguoi">In use table (#number table)</string>
    <string name="ban_trong">Empty table (#number table)</string>
    <string name="doanh_thu">Revenue</string>
    <string name="hom_nay">Today</string>
    <string name="ngay_mai">Tomorrow</string>
    <string name="hom_qua">Yesterday</string>
    <string name="thang_nay">This month</string>
    <string name="thang_truoc">Last month</string>
    <string name="khac">Other</string>
    <string name="ngay_bat_dau">Start date</string>
    <string name="ngay_ket_thuc">End date</string>
    <string name="tatca">All</string>
    <string name="gia_mang_ve">Take away price:</string>
    <string name="gia_tai_cho">Eat in price:</string>
    <string name="ten_mon">Item name</string>
    <string name="ma_mon">Item code</string>
    <string name="hoat_dong">Activity</string>
    <string name="ap_dung_them_diem"> Apply to other stores </string>
    <string name="chon_tat_ca">Select All</string>
    <string name="bo_chon">Cancel</string>
    <string name="doi_mat_khau_thanh_cong">Your password has been changed successfully!</string>
    <string name="doi_mat_khau_khong_thanh_cong">Your password has been changed unsuccessfully!</string>
    <string name="theo_doi">Follow</string>
    <string name="don_hang_dang_cho_xy_ly">Pending orders</string>
    <string name="don_hang_da_xy_ly">Processed orders</string>
    <string name="chon_ngay">Select date</string>
    <string name="co_don_hang_dang_xu_ly">#value Pending orders</string>
    <string name="select">Select</string>
    <string name="danh_sach_ban">List of tables</string>
    <string name="danh_sach_khu_vuc">List of areas</string>
    <string name="binh_quan_doanh_thu">Monthly average revenue</string>
    <string name="chon_thang">Select month</string>
    <string name="do_phu_thang">Coverage by month</string>
    <string name="do_phu_by_day">Coverage by day in month(%)</string>
    <string name="chiem">Earn: </string>
    <string name="doanhthu">revenue: </string>
    <string name="bandat">Reserved table:</string>
    <string name="profile">Account</string>
    <string name="fullname">Full name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="capnhat">Update</string>
    <string name="device_name">Device Name</string>
    <string name="device_type">Device Type</string>
    <string name="account_type">Account Type</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="valid_name">Bạn chưa nhập tên</string>
    <string name="gioitinh">Giới tính</string>
    <string name="valid_gender">Chưa chọn giới tính</string>
    <string name="valid_birthday">Chưa chọn ngày sinh</string>
    <string name="valid_email">Chưa nhập email</string>
    <string name="valid_email2">Email Không đúng định dạng</string>
    <string name="update_thanhcong">Update profile success</string>
    <string name="order_online">Order</string>
    <string name="order_online_history">Order History</string>
    <string name="add"> Add </string>
    <string name="view_cart">View cart</string>
    <string name="choose_product">Choose product</string>
    <string name="subscription">Subscription</string>
    <string name="hardware">Hardware</string>
    <string name="combo">Combo</string>
    <string name="product_description">Product Description</string>
    <string name="mess_voucher">Do you have a voucher code?</string>
    <string name="apply">Apply</string>
    <string name="provisional"> Provisional </string>
    <string name="voucher_amount">Voucher amount</string>
    <string name="subtotal"> Total Amount </string>
    <string name="place_apply"> Place apply </string>
    <string name="red_invoice">Issue a red invoice</string>
    <string name="invoice_information">Invoice information</string>
    <string name="name_bussiness">Business registration name</string>
    <string name="tax_code">Tax code</string>
    <string name="adress_bussiness">Registered business address</string>
    <string name="receiving_information">Receiving information</string>
    <string name="email_bussiness"> Email bussiness</string>
    <string name="adress">Adress</string>
    <string name="province_city">Province/City</string>
    <string name="district">District</string>
    <string name="mess_apply_voucher">Invoices are on automatic discounts. Want to replace it with a discount voucher?</string>
    <string name="mess_acces_permission_location">You need to allow the app to get your location to use this feature!</string>
    <string name="mess_delivery_info">Delivery info can not empty</string>
    <string name="payment_error">Payment error. Please try again!</string>
    <string name="payment_success">Payment success</string>
    <string name="cho_thanh_toan">Wait for pay</string>
    <string name="da_thanh_toan">Paying</string>
    <string name="da_tiep_nhan">Received</string>
    <string name="da_xu_ly_Xong">Processed</string>
    <string name="dnag_giao_hang">Shipping</string>
    <string name="bi_huy">Cancel</string>
    <string name="order_infomation">Order information</string>
    <string name="don_hang">Order</string>
    <string name="nguoi_nhan">Accepter</string>
    <string name="dia_chi_nhan_hang">Delivery address</string>
    <string name="account_information">Account information</string>
    <string name="order_cancel">Order is canceled</string>
    <string name="estimated_time_of_delivery">Estimated time of delivery</string>
    <string name="view_serial">View serial</string>
    <string name="inventory_note">Inventory note</string>
    <string name="customer_note">Customer note</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="note">Note</string>
    <string name="payment_method">Payment Method</string>
    <string name="hoan_thanh"> Finish </string>
    <string name="brand">Brand</string>
    <string name="store"> Store </string>
    <string name="not_empty">Not empty</string>
    <string name="date">Date</string>
    <string name="thongbao"> Notifications </string>
    <string name="selected_product">Selected product</string>
    <string name="error_network2">Having connection problems. Try again later</string>
    <string name="btn_ok"> OK </string>
    <string name="turnon_gps">You need to turn on GPS to load data!</string>
    <string name="information">Forwarding and payment</string>
    <string name="momo_e_wallet">MoMo e-wallet</string>
    <string name="zalopay_e_wallet">ZaloPay E-wallet</string>
    <string name="mess_check_payment">You must choose a payment method</string>
    <string name="processing">Processing</string>
    <string name="finished">Finished</string>
    <string name="home_ơverview">Overview</string>
    <string name="double_back">Press again to exit the application</string>
    <string name="tongquan">OverView</string>
    <string name="contact_to_ipos">Contact to IPOS</string>
    <string name="check_connect">Lost connect internet</string>
    <string name="inbox">Inbox (#value)</string>
    <string name="order_address_lb">In which region do you want to find products?</string>
    <string name="order_address_lb2">Select a Province / City</string>
    <string name="start">Start</string>
    <string name="khu_vuc">Area:</string>
    <string name="phancung_phanmem">Hardware - Software</string>
    <string name="nguyenvatlieu">Materials</string>
    <string name="tinraovat">Article</string>
    <string name="find_address">Enter the house number, street name.....</string>
    <string name="phuongxa">Ward/commune</string>
    <string name="save_address">Save Address</string>
    <string name="lb_fb">Send Feedback</string>
    <string name="rate_lb_5">Great</string>
    <string name="fb_success">Send comments successfully</string>
</resources>