<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/include5"
        layout="@layout/include_header2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/d_100"
        android:layout_height="@dimen/d_100"
        android:layout_marginTop="@dimen/d_30"
        android:src="@drawable/icon_fb_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include5" />

    <TextView
        android:id="@+id/mLb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d_10"
        android:gravity="center"
        android:text="@string/rate_lb_5"
        android:textAppearance="@style/TextView.SemiBold"
        android:textSize="@dimen/font_size_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <RatingBar
        android:id="@+id/mRating"
        style="@style/CustomRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/d_40"
        android:layout_marginLeft="@dimen/d_15"
        android:layout_marginTop="@dimen/d_30"
        android:layout_marginRight="@dimen/d_15"
        android:numStars="5"
        android:rating="5"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mLb" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_15"
        android:layout_marginTop="@dimen/d_15"
        android:layout_marginRight="@dimen/d_15"
        android:textColorHint="@color/gray80"
        android:theme="@style/Theme.MaterialComponents"
        app:boxStrokeColor="@color/mainColor"
        app:boxStrokeWidth="0.5dp"
        app:hintTextColor="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mRating">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/note"
            android:maxLines="3"
            android:minLines="3"
            android:paddingLeft="@dimen/d_12"
            android:paddingTop="@dimen/d_15"
            android:paddingRight="@dimen/d_12"
            android:paddingBottom="@dimen/d_15"
            android:textAppearance="@style/EditText.Regular"
            android:textSize="@dimen/font_size_17" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="@dimen/d_10"
        android:background="@color/E0E0E0"
        app:layout_constraintBottom_toTopOf="@+id/mOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mOrder"
        style="@style/UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/d_15"
        android:layout_marginRight="@dimen/d_15"
        android:layout_marginBottom="@dimen/d_10"
        android:layout_weight="1"
        android:paddingTop="@dimen/d_10"
        android:paddingBottom="@dimen/d_10"
        android:stateListAnimator="@null"
        android:text="@string/lb_fb"
        android:textAppearance="@style/TextView.SemiBold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        android:theme="@style/Theme.MaterialComponents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/layout_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans_CC005EA5"
        android:clickable="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/border_text_color_fff"
            android:paddingLeft="@dimen/standard_margin_double_30"
            android:paddingTop="@dimen/standard_margin"
            android:paddingRight="@dimen/standard_margin_double_30"
            android:paddingBottom="@dimen/standard_margin"
            android:text="@string/hoan_thanh"
            android:textAppearance="@style/TextView.SemiBold"
            android:textColor="@color/trans_CC005EA5"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/text_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/success"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/action_bar_height"
            android:text="@string/fb_success"
            android:textAppearance="@style/TextView.SemiBold"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_18" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_success"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/standard_margin_double"
            android:src="@drawable/ic_success" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>